get /timeslot implemented, auto-init db implemented
